Fix spacing utility class

--- a/source/sass/partials/utilities/_spacing.scss
+++ b/source/sass/partials/utilities/_spacing.scss
@@ -26,27 +26,27 @@
           #{$prop}-left: $length !important;
         }
 
+        // Custom, vw units
         /* ================================================= */
-				// Custom, vw units
-				.#{$abbrev}#{$infix}-#{$size}vw {
-					#{$prop}: $length + unquote("vw") !important;
-				}
-				.#{$abbrev}t#{$infix}-#{$size}vw,
-				.#{$abbrev}y#{$infix}-#{$size}vw {
-					#{$prop}-top: $length + unquote("vw") !important;
-				}
-				.#{$abbrev}r#{$infix}-#{$size}vw,
-				.#{$abbrev}x#{$infix}-#{$size}vw {
-					#{$prop}-right: $length + unquote("vw") !important;
-				}
-				.#{$abbrev}b#{$infix}-#{$size}vw,
-				.#{$abbrev}y#{$infix}-#{$size}vw {
-					#{$prop}-bottom: $length + unquote("vw") !important;
-				}
-				.#{$abbrev}l#{$infix}-#{$size}vw,
-				.#{$abbrev}x#{$infix}-#{$size}vw {
-					#{$prop}-left: $length + unquote("vw") !important;
-				}
+        .#{$abbrev}#{$infix}-#{$size}vw {
+          #{$prop}: $size + unquote("vw") !important;
+        }
+        .#{$abbrev}t#{$infix}-#{$size}vw,
+        .#{$abbrev}y#{$infix}-#{$size}vw {
+          #{$prop}-top: $size + unquote("vw") !important;
+        }
+        .#{$abbrev}r#{$infix}-#{$size}vw,
+        .#{$abbrev}x#{$infix}-#{$size}vw {
+          #{$prop}-right: $size + unquote("vw") !important;
+        }
+        .#{$abbrev}b#{$infix}-#{$size}vw,
+        .#{$abbrev}y#{$infix}-#{$size}vw {
+          #{$prop}-bottom: $size + unquote("vw") !important;
+        }
+        .#{$abbrev}l#{$infix}-#{$size}vw,
+        .#{$abbrev}x#{$infix}-#{$size}vw {
+          #{$prop}-left: $size + unquote("vw") !important;
+        }
 
       }
     }
